--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">PermissionsTest</string>
     <string name="btn_poza"> Fa o poza! </string>
-    <string name="btn_salveaza"> Salveaza aceasta poza </string>
+    <string name="btn_salveaza"> Arata harta! </string>
+    <string name="btn_share"> Share this! </string>
 </resources>
